# 3D_Edge_Sketch

./: 3D_Edge_Sketch_Settings.yaml  CMakeLists.txt  README.md
Edge_Reconst/: CMakeLists.txt  EdgeSketch_Core.cpp  EdgeSketch_Core.hpp  PairEdgeHypo.cpp  PairEdgeHypo.hpp  definitions.h  edge_mapping.cpp  edge_mapping.hpp  file_reader.cpp  file_reader.hpp  getOrientationList.cpp  getOrientationList.hpp  getQuadrilateral.cpp  getQuadrilateral.hpp  getReprojectedEdgel.cpp  getReprojectedEdgel.hpp  getSupportedEdgels.cpp  getSupportedEdgels.hpp  iteration.cpp  iteration.hpp  linearTriangulation.hpp  linearTriangulationUtil.cpp  linearTriangulationUtil.hpp  subpixel_point_set.hpp  testfile.txt  util.cpp  util.hpp
Edge_Reconst/GPU_Edge_Reconst/: consistency_check.hpp  dev_functions.cuh  gpu_edge_reconst.hpp  gpu_edge_reconst_main.cu  gpu_kernels.hpp  gpu_preprocess_edgels_HYPO1.cu  indices.hpp
Edge_Reconst/lemsvpe_CH/: vgl_point_2d_CH.cpp  vgl_point_2d_CH.hpp  vgl_polygon_CH.hpp  vgl_polygon_scan_iterator_CH.cpp  vgl_polygon_scan_iterator_CH.hpp
EverythingOld/: AccessEdgelsFromInteriorBuckets.cpp  getQuadrilateral.cpp  getQuadrilateral.hpp  iteration.cpp  iteration.hpp  old_main.cpp  subpixel_point_set.hpp
EverythingOld/lemsvpe_CH/: vgl_region_scan_iterator_CH.hpp
MATLAB/: ABCreproj.m  Convert_CPP_to_MATLAB.m  Generate_Syn_Data.m  Get_Dataset.m  MainCode_231003.m  MainCode_231105.m  MainCode_240108.m  MainCode_240301.m  PR_C.m  PRcurve.m  Pre_Recal.m  RoC.m  SIFTdetection.m  analytic_trinocular_tangent_pairs.m  backupsyn.m  combineGamma1.m  compareedst.m  contrastfinding.m  distributionHYPO12.m  distriedge.m  edgelsHYPO2correct.m  edgelsHYPO2correct_1.m  emmm.m  fetchDaraFromICLdataset.m  fetchDayaFromICLdataset.m  formGamma1.m  gammatest.m  get3DOrientation.m  getFinalHypothesisPair.m  getOreList.m  getOreList31.m  getOreList_New.m  getOreList_New_1.m  getOreList_New_bk.m  getOreList_New_green.m  getOreList_Vali.m  getRelativePose.m  getRelativePose1.m  getReprojectedEdgel.m  getReprojectedEdgelCorrected.m  (+37 more)
cmd/: CMakeLists.txt  main.cpp
datasets/ABC-NEF/00004605/: transforms_train.json
evaluation/: eval_main.py  eval_util.py  gen_GT_curve_points.py  requirements.txt
outputs/: .nfs0da0d697a9c87be900000536  3D_edges_ABC-NEF_00004605_hypo1_14_hypo2_19_t4to4_delta03_theta15.000000_N4.txt  3D_edges_ABC-NEF_00004605_hypo1_43_hypo2_22_t4to4_delta03_theta15.000000_N4.txt  3D_edges_ABC-NEF_00004605_hypo1_8_hypo2_5_t4to4_delta03_theta15.000000_N4.txt  Gamma1s_ABC-NEF_00000006_0n20_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000006_0n33_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000006_16n18_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000006_21n0_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000006_21n5_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000006_28n33_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000006_28n47_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000006_46n20_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000006_6n8_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_13n3_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_13n44_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_13n5_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_15n37_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_15n44_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_31n34_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_3n40_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_47n15_t32to0_delta03_theta15_N4.txt  Gamma1s_ABC-NEF_00000568_6n8_t32to0_delta03_theta15_N4.txt  paired_edge_final.txt
preprocesser/: get_batch_poses_from_ABC_NEF_dataset.m  get_poses_from_ABC_NEF_dataset.m  get_poses_from_dataset.m
preprocesser/third_order_edge_detector/: get_TO_Edges_List_in_dataset.m  get_all_TO_Edges_List_in_dataset.m  get_batch_TO_Edges_List_in_dataset.m
visualization/: plot_3D_edge_sketch.m  plot_angle_range.m  plot_contours_from_cemv.m  plot_corresponding_point.m  plot_edge.m  proj.m
(+1111 files in other folders)
